# curswork1

./: .coverage  .env_example  .gitignore  README.md  pyproject.toml  user_setting.json
reports/: spend_by_category_20231215_000000.json  spend_by_category_20250627_192354.json  spend_by_category_20250916_092618.json  spend_by_category_20250916_093223.json  spend_by_category_20250916_093424.json  spend_by_category_20250916_093425.json  spend_by_category_20250916_093531.json  spend_by_category_20250916_093532.json
src/: logger.py  main.py  reports.py  services.py  utils.py
tests/: test_services.py
