[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_assistant"
version = "0.1.0"
description = "Finance Assistant Application"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "requests>=2.28.1",
    "pandas>=1.5.2",
    "fastapi>=0.85.0",
    "uvicorn>=0.19.0",
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120
